# pure-zlib

./: flake.nix  pure-zlib.cabal
src/Codec/Compression/Zlib/: Adler32.hs  Compression.hs  OutputWindow.hs
