cabal-version:       2.0
name:                pure-zlib
version:             0.8.0
synopsis:            A Haskell-only implementation of zlib / DEFLATE
homepage:            http://github.com/GaloisInc/pure-zlib
license:             BSD3
license-file:        LICENSE
author:              Adam Wick
maintainer:          awick@galois.com
category:            Codec
build-type:          Simple
description:         A Haskell-only implementation of the zlib / DEFLATE
                     protocol. Currently only implements the decompression
                     algorithm.
extra-source-files: test/test-cases/*.z,
                    test/test-cases/*.gold
tested-with:
  GHC==9.2.8

library
  default-language:   Haskell2010
  ghc-options:        -Wall
  hs-source-dirs:     src
  build-depends:
                      array,
                      base,
                      base-compat,
                      bytestring,
                      bytestring-builder,
                      containers,
                      vector,
                      primitive
  if !impl(ghc >= 8.0)
    build-depends: semigroups
  exposed-modules:
                      Codec.Compression.Zlib,
                      Codec.Compression.Zlib.Adler32,
                      Codec.Compression.Zlib.Deflate,
                      Codec.Compression.Zlib.HuffmanTree,
                      Codec.Compression.Zlib.Monad,
                      Codec.Compression.Zlib.OutputWindow
  default-extensions:
                      BangPatterns,
                      DeriveDataTypeable,
                      GeneralizedNewtypeDeriving,
                      MultiParamTypeClasses,
                      MultiWayIf

executable deflate
  default-language:   Haskell2010
  main-is:            Deflate.hs
  ghc-options:        -Wall
  build-depends:
                      base,
                      base-compat,
                      bytestring,
                      ghc-prim,
                      pure-zlib

test-suite test-zlib
  type:               exitcode-stdio-1.0
  main-is:            Test.hs
  ghc-options:        -Wall
  hs-source-dirs:     test
  default-language:   Haskell2010
  ghc-options:        -fno-warn-orphans
  build-depends:
                      base,
                      base-compat,
                      bytestring,
                      filepath,
                      HUnit,
                      tasty-hunit,
                      QuickCheck,
                      pure-zlib,
                      tasty,
                      tasty,
                      tasty-quickcheck

benchmark bench-zlib
  type:               exitcode-stdio-1.0
  main-is:            Benchmark.hs
  default-language:   Haskell2010
  ghc-options:        -Wall
  build-depends:
                      base,
                      base-compat,
                      bytestring,
                      criterion,
                      pure-zlib,
                      zlib,
                      time
  mixins:
    pure-zlib (Codec.Compression.Zlib as PureZlib),
    zlib (Codec.Compression.Zlib as CZlib),
    zlib (Codec.Compression.Zlib.Internal as CZlib.Internal)

source-repository head
  type: git
  location: git://github.com/GaloisInc/pure-zlib.git

